--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Uncle Cletus's Cook book</title>
 </head>
 <body>
@@ -10,6 +11,7 @@
     <ul>
         <li><a href="recipes/cranberry-sauce.html">Cousin Elaine's Cranberry Sauce</a></li>
         <li><a href="recipes/pigs-in-blanket.html">Your Moms Pigs In a Blanket</a></li>
+        <li><a href="recipes/lasagna-soup.html">Garfields Lasagna Soup</a></li>
     </ul>
     
     
