--- a/recipes/pigs-in-blanket.html
+++ b/recipes/pigs-in-blanket.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Your Moms Pigs in a Blanket</title>
 </head>
 <body>
     <h1>Your Moms Pigs in a Blanket</h1>
     <img src="https://redneckrecipes.files.wordpress.com/2023/01/pretzel-pigs-in-a-blanket-2.jpg?w=450&h=338" alt="Pic of Pigs in a blanket.">
-    <p>
-        This recipe comes to us from <strong>your</strong> mom. 
-    </p>
+    <hr>
+    <p>This recipe comes to us from <strong>your</strong> mom.</p>
     <ul>
         <li>Vegetable oil, for brushing</li>
         <li>1 pound refrigerated pizza dough, at Alabama in June room temperature</li>
@@ -20,17 +20,21 @@
         <li>1 large egg, beaten to death</li>
         <li>Spicy mustard, for dipping - Cause we ain't no sissy liberals!</li>
     </ul>
-
-    <p> I Brush a baking sheet with vegetable oil. Cut the pizza dough into 8 equal sissy pieces.
-        Roll each piece into a 12-inch-long rope. Wrap each rope around the neck of a hot dog.
-        Arrange on the baking sheet, loosely cover and set aside at room temperature until puff daddy, 45 minutes.
-        Preheat the oven to 400˚F.
-        Combine 3 quarts spring water, the baking soda and 2 tablespoons salt in a large pot; bring to a boil. Working in batches, use a slotted spoon to drown the pigs in a blanket into the boiling water.
-        Cook, turning once, 1 minute.
-        Remove the pigs in a blanket with the slotted spoon and return to the baking sheet; brush with the dead beat egg and sprinkle with more salt.
-        Bake until browned, 15 to 20 minutes. Serve with non sissy spicy mustard.
-        
-        </p>
+    <h2>Instructions:</h2>
+    <ol>
+        <li>Preheat the oven to 400˚F.</li>
+        <li>Brush a baking sheet with vegetable oil.</li>
+        <li>Cut the pizza dough into 8 equal sissy pieces.</li>
+        <li>Roll each piece into a 12-inch-long rope.</li>
+        <li>Wrap each rope around the neck of a hot dog.</li>
+        <li>Arrange on the baking sheet, loosely cover and set aside at room temperature until puff daddy, 45 minutes.</li>
+        <li>Combine 3 quarts spring water, the baking soda and 2 tablespoons salt in a large pot; bring to a boil.</li>
+        <li>Working in batches, use a slotted spoon to drown the pigs in a blanket into the boiling water.</li>
+        <li>Cook, turning once, 1 minute.</li>
+        <li>Remove the pigs in a blanket with the slotted spoon and return to the baking sheet; brush with the dead beat egg and sprinkle with more salt.</li>
+        <li>Bake until browned, 15 to 20 minutes.</li>
+        <li>Serve with non sissy spicy mustard.</li>
+    </ol>
 
 </body>
 </html>
