--- a/recipes/lasagna-soup.html
+++ b/recipes/lasagna-soup.html
@@ -3,36 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <title>Garfields Lasagna Soup</title>
 </head>
 <body>
-    <h1>Walmart Lasagna Soup</h1>
+    <h1>Garfields Lasagna Soup</h1>
     <img src="https://redneckrecipes.files.wordpress.com/2023/01/lasagna-2.jpg?w=450&h=338" alt="Pic lasagna soup.">
-    <p>
-        Now this recipe is gonna make you want to kick a fat kid at a Walmart parking lot! 
-    </p>
+    <hr>
+    <p>Now this recipe is gonna make you want to kick a fat kid at a Walmart parking lot!</p>
     <ul>
         <li>1 pound ground pork</li>
         <li>½ cup diced yellow onion</li>
         <li>1 green pepper, seeded and diced</li>
         <li>4 cloves garlic, pressed</li>
-        <li>Kosher salt</li>
-        <li>1 large egg, beaten to death</li>
-        <li>Spicy mustard, for dipping - Cause we ain't no sissy liberals!</li>
+        <li>1 carton (32 ounce) chicken broth</li>
+        <li>1 can (14.5 ounce) diced tomatoes</li>
+        <li>1 can (15 ounce) tomato sauce</li>
+        <li>1 Tablespoon Italian seasoning</li>
+        <li>½ teaspoon kosher salt</li>
+        <li>¼ teaspoon ground black pepper</li>
+        <li>1 teaspoon garlic salt</li>
+        <li>¼ teaspoon crushed red pepper</li>
+        <li>1 teaspoon dried basil</li>
+        <li>8 lasagna noodles, broken into bite sized pieces</li>
+        <li>¾ cup Parmesan cheese, grated</li>
+        <li>1 ½ cup mozzarella cheese, shredded</li>
     </ul>
 
-    <p> I Brush a baking sheet with vegetable oil. Cut the pizza dough into 8 equal sissy pieces.
-        Roll each piece into a 12-inch-long rope. Wrap each rope around the neck of a hot dog.
-        Arrange on the baking sheet, loosely cover and set aside at room temperature until puff daddy, 45 minutes.
-        Preheat the oven to 400˚F.
-        Combine 3 quarts spring water, the baking soda and 2 tablespoons salt in a large pot; bring to a boil. Working in batches, use a slotted spoon to drown the pigs in a blanket into the boiling water.
-        Cook, turning once, 1 minute.
-        Remove the pigs in a blanket with the slotted spoon and return to the baking sheet; brush with the dead beat egg and sprinkle with more salt.
-        Bake until browned, 15 to 20 minutes. Serve with non sissy spicy mustard.
-        
-        </p>
+    <h2>Instructions:</h2>
+    <ol>
+        <li>In a large soup pot, brown ground pork with onion, green pepper and garlic.</li>
+        <li>Add chicken broth, tomatoes, tomato sauce, and seasonings. Bring to a boil over medium high heat.</li>
+        <li>Boil 2 minutes, then reduce to a simmer and cook for 30 minutes, covered. Stir occasionally.</li>
+        <li>Add bite sized lasagna noodles to soup and cook until tender (about 15 minutes).</li>
+        <li>When ready to serve, mix in the grated Parmesan cheese. Ladle into individual bowls and sprinkle with shredded mozzarella cheese.</li>
+    </ol>
+   
 
 </body>
 </html>
 
-https://redneckrecipes.wordpress.com/2023/01/27/lasagna-soup/#more-2843
